[gd_scene load_steps=12 format=3 uid="uid://c7rbklhlb5ith"]

[ext_resource type="Script" path="res://car.gd" id="1_qacji"]
[ext_resource type="Script" path="res://Wheel.gd" id="2_1x7s3"]
[ext_resource type="PackedScene" uid="uid://bn8nwvq40s24j" path="res://uaantitled.glb" id="2_166s7"]
[ext_resource type="PackedScene" uid="uid://bk8pdv42o38dp" path="res://trail.tscn" id="4_62urv"]
[ext_resource type="Texture2D" uid="uid://dksts66sj8job" path="res://New Project (2).svg" id="5_2bbq6"]
[ext_resource type="FontFile" uid="uid://c6wyek4suanyo" path="res://Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="7_eg72h"]
[ext_resource type="Texture2D" uid="uid://cjg3bnqo4asqd" path="res://New Project (2)-svg.svg" id="7_jsasi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x724t"]
size = Vector3(2, 0.2, 4)

[sub_resource type="BoxMesh" id="BoxMesh_xtftu"]
size = Vector3(2, 0.2, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djf33"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_sji6p"]
material = SubResource("StandardMaterial3D_djf33")

[node name="Car" type="RigidBody3D"]
mass = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.6, 0)
continuous_cd = true
angular_damp = 10.0
script = ExtResource("1_qacji")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_x724t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("BoxMesh_xtftu")

[node name="uaantitled" parent="CollisionShape3D" instance=ExtResource("2_166s7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Wheels" type="Node3D" parent="."]

[node name="FR" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, -1.8)
script = ExtResource("2_1x7s3")
is_frontwheel = true

[node name="Label3D" type="Label3D" parent="Wheels/FR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657257, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheels/FR"]
transform = Transform3D(0.3, 0, 0, 0, -4.80322e-08, 0.3, 0, -1.09885, -1.31134e-08, 0, -0.762408, 0)
mesh = SubResource("CylinderMesh_sji6p")

[node name="FL" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, -1.8)
script = ExtResource("2_1x7s3")
is_frontwheel = true

[node name="Label3D2" type="Label3D" parent="Wheels/FL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631978, 0)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Wheels/FL"]
transform = Transform3D(0.3, 0, 0, 0, -4.80322e-08, 0.3, 0, -1.09885, -1.31134e-08, 0, -0.762408, 0)
mesh = SubResource("CylinderMesh_sji6p")
skeleton = NodePath("../../FR")

[node name="BR" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 1.8)
script = ExtResource("2_1x7s3")

[node name="Label3D3" type="Label3D" parent="Wheels/BR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.640405, 0)

[node name="BL" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 1.8)
script = ExtResource("2_1x7s3")

[node name="Label3D4" type="Label3D" parent="Wheels/BL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.716242, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
spring_length = 7.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
current = true

[node name="GPUParticles3D" parent="." instance=ExtResource("4_62urv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.43288)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -245.0
offset_right = 215.0
grow_vertical = 0
fill_mode = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
value = 95.0
fill_mode = 4
texture_under = ExtResource("5_2bbq6")
texture_over = ExtResource("5_2bbq6")
texture_progress = ExtResource("7_jsasi")
tint_under = Color(0.388235, 1, 1, 1)
tint_progress = Color(0.796078, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 350.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("7_eg72h")
theme_override_font_sizes/font_size = 70
text = "LAP: "
